# mymedicalflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/assets/: logos.ts
src/components/layout/: AppLayout.tsx  Sidebar.tsx  SplashScreen.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx
src/features/appuntamenti/: AppuntamentiFilters.tsx  AppuntamentiPage.tsx  AppuntamentiTable.tsx  AppuntamentoModal.tsx  DeleteAppuntamentoConfirm.tsx  appuntamentoValidation.ts
src/features/fatture/: DeleteInvoiceConfirm.tsx  FatturaModal.tsx  FattureFilters.tsx  FatturePage.tsx  FattureTable.tsx  PazienteOmonimoModal.tsx  fatturaValidation.ts
src/features/pazienti/: CartellaPaziente.tsx  DeleteConfirm.tsx  PazienteModal.tsx  PazientiFilters.tsx  PazientiPage.tsx  PazientiTable.tsx  (+1 more)
src/lib/: appuntamentoService.ts  documentService.ts  fatturaService.ts  impostazioniService.ts  pazienteService.ts  profiloService.ts  storageService.ts  validazioni.ts
src/pages/: AppuntamentiPage.tsx  DashboardPage.tsx  FatturePage.tsx  ImpostazioniPage.tsx  PazientiPage.tsx  ProfiloPage.tsx  SetupPage.tsx
src/stores/: appuntamentoStore.ts  fatturaStore.ts  impostazioniStore.ts  pazienteStore.ts  profiloStore.ts
src/types/: appuntamento.ts  fattura.ts  index.ts  paziente.ts
