[package]
name = "mymedicalflow"
version = "0.1.0"
description = "MyMedicalFlow - Gestionale medico desktop offline"
authors = ["MyMedicalFlow"]
edition = "2021"

# Vedi ulteriori chiavi e le loro definizioni su https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Il _sidecar_ Tauri viene compilato come libreria dinamica
name = "mymedicalflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
